--- a/css/style.scss
+++ b/css/style.scss
@@ -356,3 +356,29 @@ nav {
         }
     }
 }
+
+.cursor {
+    animation: cursorFlashing 2s infinite linear;
+}
+
+@keyframes cursorFlashing {
+    0% {
+        opacity: 1;
+    }
+
+    25% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    75% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
