change of wellcoming font-size

--- a/css/style.css
+++ b/css/style.css
@@ -97,28 +97,6 @@ nav ul.mobile-active {
           transform: translateX(0);
 }
 
-nav ul::after {
-  display: block;
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  background: linear-gradient(190deg, black 0%, rgba(0, 0, 0, 0) 100%);
-  z-index: -1;
-  -webkit-transform: translateX(110%);
-          transform: translateX(110%);
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-nav .changeMenuBackground {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-
 #home {
   display: -ms-grid;
   display: grid;
@@ -138,6 +116,7 @@ nav .changeMenuBackground {
 }
 
 #home .home__text p {
+  font-size: 18px;
   text-align: center;
 }
 
@@ -240,11 +219,13 @@ nav .changeMenuBackground {
   #home .home__text h2 {
     font-size: 26px;
   }
+  #home .home__text p {
+    letter-spacing: 1px;
+  }
   #home .home__image {
     height: 31.25vw;
     max-height: 437.5px;
   }
-  #home p,
   #home button {
     font-size: 18px;
     letter-spacing: 1px;
@@ -258,11 +239,11 @@ nav .changeMenuBackground {
   #home .home__text h2 {
     font-size: 4vw;
   }
-  #home p,
-  #home button {
+  #home .home__text p {
     font-size: 3vw;
   }
   #home button {
+    font-size: 3vw;
     height: 6vw;
     width: 18.5vw;
     max-height: 84px;
@@ -344,6 +325,9 @@ nav .changeMenuBackground {
   }
   #home .home__text h2 {
     font-size: 56px;
+  }
+  #home .home__text p {
+    font-size: 40px;
   }
   #home p,
   #home button {
