--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,7 @@
 
 $background-color: radial-gradient(circle, rgba(20, 16, 75, 1) 61%, rgba(0, 0, 0, 1) 100%);
 $colorTextParagraph: #5D6687;
-$activeButtonColor: #FF4D71;
+$activeButtonColor: darkorange;
 
 * {
     margin: 0;
@@ -41,9 +41,14 @@ nav {
         left: 5px;
         border: none;
         z-index: 2;
+        transition: .3s;
 
         i {
             font-size: 34px;
+        }
+
+        .mobile-active {
+            color: $activeButtonColor;
         }
 
     }
@@ -81,7 +86,7 @@ nav {
         }
 
         a:visited {
-            color: #5D6687;
+            color: $colorTextParagraph;
         }
 
         a:hover {
@@ -112,19 +117,22 @@ nav {
         p {
             font-size: 18px;
             text-align: center;
+            text-shadow: 2px 2px 4px black;
         }
 
         h1 {
             color: #EFF7FE;
             letter-spacing: 1px;
             text-align: center;
+            text-shadow: 2px 2px 4px black;
         }
 
         h2 {
             font-weight: normal;
-            font-size: 22px;
+            font-size: 24px;
             letter-spacing: 1px;
             text-align: center;
+            text-shadow: 2px 2px 4px black;
         }
     }
 
@@ -163,12 +171,24 @@ nav {
         width: 100%;
         height: 6px;
         background: radial-gradient(circle, rgba(0, 0, 0, 1) 61%, rgba(20, 16, 75, 1) 100%);
-        transition: transform .2s linear 0s, height .2s ease .2s;
+        transition: transform .2s linear 0s, height .2s ease .5s;
     }
 
     button:hover::after {
         transform: translate(0, -50%);
         height: 100%;
+    }
+}
+
+@media(min-width: 360px) {
+    #home {
+
+        .home__text {
+
+            h2 {
+                font-size: 28px;
+            }
+        }
     }
 }
 
