--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@ button {
   cursor: pointer;
   background-color: transparent;
   color: #5D6687;
-  border: 2px solid darkorange;
-  color: darkorange;
+  border: 2px solid #EFF7FE;
+  color: #EFF7FE;
 }
 
 nav .hamburger {
@@ -47,15 +47,15 @@ nav .hamburger i {
 }
 
 nav .hamburger .mobile-active {
-  color: darkorange;
+  color: #EFF7FE;
 }
 
 nav ul {
   position: fixed;
   top: 0;
   left: 0;
-  -webkit-transform: translateX(-200px);
-          transform: translateX(-200px);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -99,7 +99,7 @@ nav ul a:visited {
 }
 
 nav ul a:hover {
-  color: darkorange;
+  color: #EFF7FE;
 }
 
 nav ul.mobile-active {
@@ -151,15 +151,15 @@ nav ul.mobile-active {
   -ms-grid-column: 1;
   grid-area: photo;
   margin: 25px auto;
-  height: 250px;
+  height: 200px;
 }
 
 #home .home__image img {
   height: 100%;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
-  -webkit-box-shadow: 2px 2px 4px black;
-          box-shadow: 2px 2px 4px black;
+  -webkit-box-shadow: 0 0 4px black;
+          box-shadow: 0 0 4px black;
 }
 
 #home button {
@@ -187,10 +187,10 @@ nav ul.mobile-active {
   width: 100%;
   height: 6px;
   background: radial-gradient(circle, black 61%, #14104b 100%);
-  -webkit-transition: height .2s ease .5s, -webkit-transform .2s linear 0s;
-  transition: height .2s ease .5s, -webkit-transform .2s linear 0s;
-  transition: transform .2s linear 0s, height .2s ease .5s;
-  transition: transform .2s linear 0s, height .2s ease .5s, -webkit-transform .2s linear 0s;
+  -webkit-transition: height .2s ease .3s, -webkit-transform .2s linear 0s;
+  transition: height .2s ease .3s, -webkit-transform .2s linear 0s;
+  transition: transform .2s linear 0s, height .2s ease .3s;
+  transition: transform .2s linear 0s, height .2s ease .3s, -webkit-transform .2s linear 0s;
 }
 
 #home button:hover::after {
@@ -200,6 +200,9 @@ nav ul.mobile-active {
 }
 
 @media (min-width: 360px) {
+  #home .home__text {
+    min-width: 330px;
+  }
   #home .home__text h2 {
     font-size: 28px;
   }
@@ -293,7 +296,7 @@ nav ul.mobile-active {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 40px 6% 40px 0;
+    padding: 40px 0 40px 0;
     width: 100%;
     height: 70px;
     border-bottom-right-radius: none;
@@ -304,7 +307,7 @@ nav ul.mobile-active {
     transition: .3s;
   }
   nav ul li {
-    margin-right: 100px;
+    margin: 0 35px;
   }
   nav ul li a {
     display: -webkit-box;
@@ -327,14 +330,14 @@ nav ul.mobile-active {
     border: 2px solid transparent;
   }
   nav ul li a:hover {
-    border-color: darkorange;
+    border-color: #EFF7FE;
   }
   #home {
     margin: 90px 20px 0;
   }
   #home .home__image img {
-    -webkit-box-shadow: 2px 2px 4px black;
-            box-shadow: 2px 2px 4px black;
+    -webkit-box-shadow: 0 0 8px black;
+            box-shadow: 0 0 8px black;
   }
 }
 
